--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -1,13 +1,12 @@
-name: Greetings
-
-on: [pull_request, issues]
+name: "PR Greeter"
+on: [pull_request]
 
 jobs:
-  greeting:
+  pr-greeter:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/first-interaction@v1
-      with:
-        repo-token: ${{ secrets.GITHUB_TOKEN }}
-        issue-message: 'Hello @${{ github.actor }} , thank you for submitting an issue!'
-        pr-message: 'Hello @${{ github.actor }} , thank you submitting a pull request!'
+      - name: "Greeter"
+        uses: Radhika/pr-greeting-action@releases/v0
+        with:
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          pr-message: "Hey **#** welcome to this repo"
