--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -6,7 +6,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: "Greeter"
-        uses: Radhika/pr-greeting-action@releases/v0
+        uses: JJ/pr-greeting-action@releases/v0
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           pr-message: "Hey **#** welcome to this repo"
