--- a/.github/workflows/greets.yml
+++ b/.github/workflows/greets.yml
@@ -9,5 +9,5 @@ jobs:
     - uses: actions/first-interaction@v1
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
-        issue-message: 'Message that will be displayed on users first issue'
+        issue-message: 'Welcome to the Property Management System :houses: '
         pr-message: 'Message that will be displayed on users first pull request'
